--- a/Appsisteme/Base.lproj/Main.storyboard
+++ b/Appsisteme/Base.lproj/Main.storyboard
@@ -150,7 +150,6 @@
                             <constraint firstItem="bHv-GN-Hnp" firstAttribute="leading" secondItem="zJL-No-Hkc" secondAttribute="leadingMargin" constant="24" id="TiW-wS-9XU"/>
                             <constraint firstItem="68v-44-jcr" firstAttribute="centerX" secondItem="zJL-No-Hkc" secondAttribute="centerX" id="V4v-LH-A0p"/>
                             <constraint firstItem="bHv-GN-Hnp" firstAttribute="centerX" secondItem="zJL-No-Hkc" secondAttribute="centerX" id="Vl4-y5-Qpi"/>
-                            <constraint firstItem="ljH-hi-sIj" firstAttribute="top" secondItem="68v-44-jcr" secondAttribute="bottom" constant="50" id="aA0-dK-s2S"/>
                             <constraint firstItem="1oO-8y-u5t" firstAttribute="leading" secondItem="zJL-No-Hkc" secondAttribute="leadingMargin" constant="24" id="hSg-tn-U6V"/>
                             <constraint firstItem="bHv-GN-Hnp" firstAttribute="top" secondItem="GLx-2M-EUP" secondAttribute="bottom" constant="65" id="i2M-LW-30W"/>
                         </constraints>
@@ -200,7 +199,7 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSJ-EP-B7K">
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gSJ-EP-B7K">
                                 <rect key="frame" x="121" y="518" width="78" height="30"/>
                                 <color key="backgroundColor" red="0.59937667939999995" green="0.29577203800000001" blue="0.26210814560000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
@@ -225,7 +224,6 @@
                             <constraint firstItem="YgD-Ly-IJa" firstAttribute="centerX" secondItem="En3-E2-UOd" secondAttribute="centerX" id="tBK-cj-bEc"/>
                             <constraint firstItem="YgD-Ly-IJa" firstAttribute="centerY" secondItem="En3-E2-UOd" secondAttribute="centerY" id="uAh-0g-XEU"/>
                             <constraint firstItem="D7M-e4-kWX" firstAttribute="centerX" secondItem="En3-E2-UOd" secondAttribute="centerX" id="vID-59-WyV"/>
-                            <constraint firstItem="Ajj-6t-kvM" firstAttribute="top" secondItem="gSJ-EP-B7K" secondAttribute="bottom" constant="20" id="vvh-CQ-rVp"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
@@ -370,26 +368,26 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre del contacto" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2oV-fS-vkb">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Nombre del contacto" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2oV-fS-vkb">
                                 <rect key="frame" x="79" y="91" width="162" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Teléfono del contacto" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KRl-5t-fcG">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Teléfono del contacto" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="KRl-5t-fcG">
                                 <rect key="frame" x="79" y="163" width="162" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qzr-Wf-RoP">
-                                <rect key="frame" x="77" y="263" width="54" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qzr-Wf-RoP">
+                                <rect key="frame" x="79" y="263" width="54" height="30"/>
                                 <state key="normal" title="Aceptar"/>
                                 <connections>
                                     <action selector="aceptContact:" destination="rDr-VR-8yb" eventType="touchUpInside" id="GY4-4p-Khm"/>
                                     <segue destination="bip-VO-bNj" kind="unwind" unwindAction="unwindToContactsView:" id="Gnh-5p-Prn"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="97J-jl-muR">
-                                <rect key="frame" x="186" y="263" width="71" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="97J-jl-muR">
+                                <rect key="frame" x="188" y="263" width="71" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="71" id="i8P-kp-WUe"/>
                                 </constraints>
@@ -404,14 +402,12 @@
                         <constraints>
                             <constraint firstItem="KRl-5t-fcG" firstAttribute="trailing" secondItem="2oV-fS-vkb" secondAttribute="trailing" id="6a3-eZ-pcU"/>
                             <constraint firstItem="97J-jl-muR" firstAttribute="leading" secondItem="Qzr-Wf-RoP" secondAttribute="trailing" constant="55" id="AqV-Mh-aWW"/>
-                            <constraint firstItem="8Ft-cr-83W" firstAttribute="top" secondItem="97J-jl-muR" secondAttribute="bottom" constant="138" id="C4U-y3-6uz"/>
                             <constraint firstItem="KRl-5t-fcG" firstAttribute="centerX" secondItem="oZg-1t-cUv" secondAttribute="centerX" id="Jsg-93-tcz"/>
                             <constraint firstAttribute="trailingMargin" secondItem="97J-jl-muR" secondAttribute="trailing" constant="47" id="KvU-ik-mfa"/>
                             <constraint firstItem="KRl-5t-fcG" firstAttribute="leading" secondItem="2oV-fS-vkb" secondAttribute="leading" id="bbb-Ab-jYd"/>
                             <constraint firstItem="KRl-5t-fcG" firstAttribute="top" secondItem="2oV-fS-vkb" secondAttribute="bottom" constant="42" id="gPM-Lw-GHi"/>
                             <constraint firstItem="97J-jl-muR" firstAttribute="top" secondItem="KRl-5t-fcG" secondAttribute="bottom" constant="70" id="l2r-LF-lwN"/>
                             <constraint firstItem="KRl-5t-fcG" firstAttribute="leading" secondItem="oZg-1t-cUv" secondAttribute="leadingMargin" constant="63" id="wCM-HD-hlD"/>
-                            <constraint firstItem="8Ft-cr-83W" firstAttribute="top" secondItem="Qzr-Wf-RoP" secondAttribute="bottom" constant="138" id="wu0-IX-BY8"/>
                         </constraints>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
@@ -857,7 +853,6 @@
                         <constraints>
                             <constraint firstItem="hfY-mT-xvD" firstAttribute="top" secondItem="gmS-90-neo" secondAttribute="bottom" constant="30" id="0gC-aE-vUV"/>
                             <constraint firstItem="YxD-h0-3Rz" firstAttribute="top" secondItem="jAt-Bl-kZg" secondAttribute="bottom" constant="55" id="5yE-Qu-oqF"/>
-                            <constraint firstItem="mLC-jj-Wha" firstAttribute="top" secondItem="JxM-Gs-0Cs" secondAttribute="bottom" constant="61" id="CcH-2T-Axt"/>
                             <constraint firstItem="CXp-PE-MhA" firstAttribute="leading" secondItem="JSQ-Qf-bmv" secondAttribute="leadingMargin" constant="24" id="LFt-59-D0g"/>
                             <constraint firstItem="JxM-Gs-0Cs" firstAttribute="top" secondItem="hfY-mT-xvD" secondAttribute="bottom" id="LJB-lw-VnW"/>
                             <constraint firstAttribute="trailingMargin" secondItem="gmS-90-neo" secondAttribute="trailing" constant="100" id="OU5-K2-maV"/>
